$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-27 (opened September 1, 2009)


	* cca & rda: New way of handling na.action. Function ordiNAexclude
	adds items CCA$wa.excluded or CA$u.excluded for NA rows into
	ordination result, and function ordiNApredict called in scores.cca
	and scores.rda pads the results with these excluded data. In this
	way the internal structure of the cca object remains unchanged,
	but functions accessing the result with scores will get the NA
	data. 

	* anova.cca(..., by = "term") and step() did not work correctly
	with na.exclude or na.omit. These fitted sequential models, and
	due to missing value removal the data set could change in the
	sequence. The problem case was step() which relies on standard
	stats functions add1.default and drop1.default. They detect the
	change in data by length(object$residuals). Therefore
	ordiNAexclude adds item 'residuals.zombie' to the ordination
	result so that step() works. The same mechanism is also used in
	anova.ccabyterm (not all NA deletions change the numbers of
	observations).

	* weights.cca and weights.rda know na.action.

	* Fixing cca/rda functions for changes in weights(). The rule is
	that you can mix scores() and weights(), but if you have internal
	cca object stuctures (like x$CCA$u), you should have internal
	weights x$rowsum. Concerns as.mlm.cca, goodness.cca,
	permutest.cca, spenvcor, inertcomp and intersetcor. (The inertcomp
	solution is a kluge.)
	
	* plot.cca: works when there are NA values in scores.

	* anova.cca(.., by = "axis") works when there are omitted or
	excluded observations due to missing values. However, the way the
	missing values are handled in simulations should be checked in all
	anova.cca models: are the missing rows permuted or not?
	
Version 1.16-26 (closed September 1, 2009)

	* cca and rda: can now handle missing values in constraints or
	conditions. With 'na.action = na.omit', the rows with missing